syntax = "proto3";

option csharp_namespace = "GrpcClient";

// Definition

service LogicServer {
    rpc createMember(MemberTO) returns(ResponseMember);
    rpc loginMember(MemberTO) returns(ResponseMember);
}

message MemberTO {
    string username = 1;
    string password = 2;
}

message ResponseMember {
    string username = 2;
}